src/objects/SPE_Mapping_Values__c.object
<CustomObject>
    <fields>
        <fullName>Header_Value__c</fullName>
        <label>Header Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping_Field__c</fullName>
        <label>Mapping Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Mapping Template</label>
        <referenceTo>SPE_Mapping_Template__c</referenceTo>
        <relationshipLabel>SPE Mapping Values</relationshipLabel>
        <relationshipName>SPE_Mapping_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPE_IsScreenInput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPE_IsScreenInput</label>
        <type>Checkbox</type>
    </fields>
    <label>SPE Mapping Values</label>
    <nameField>
        <displayFormat>MV-{0000}</displayFormat>
        <label>SPE Mapping Values Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE Mapping Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>